Tweak landing page design

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ function toggle_light() {
 					style="max-height: 700rem!important; max-width: 1000rem!important">
 					</a>
 					<div class="center-align padding">
-						<a href="it/index.html" class="button border indigo white-text"
-						style="min-height: 50px!important; min-width: 180px!important"><h5>Italiano</h5></a>
+						<a href="it/index.html" class="button border indigo white-text middle-align"
+						style="min-height: 40px!important"><h5>Italiano</h5></a>
 					</div>
 					</article>
 				</div>
@@ -106,8 +106,8 @@ function toggle_light() {
 					style="max-height: 700rem!important; max-width: 1000rem!important">
 					</a>
 					<div class="center-align padding">
-						<a href="en/index.html" class="button border indigo white-text"
-						style="min-height: 50px!important; min-width: 180px!important"><h5>English</h5></a>
+						<a href="en/index.html" class="button border indigo white-text middle-align"
+						style="min-height: 40px!important"><h5>English</h5></a>
 					</div>
 					</article>
 				</div>
