--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ function toggle_light() {
 	</button>
 
 	<div class="small-margin">
-		<article class="center middle small-margin medium-mtop">
+		<article class="center middle small-margin" style="margin-top: 20rem!important">
 			<div class="margin no-wrap">
 				<h6 class="card border center-align bold indigo white-text small-padding">Scegli una lingua &mdash; Choose a language</h6>
 			</div>
