--- a/kernel.html
+++ b/kernel.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Salonia Matteo</title>
+	<title>Kernel - Salonia Matteo</title>
+
+	<!-- Tell browser to redirect to Italian & English pages -->
+	<link rel="alternate" href="https://saloniamatteo.top/it/info.html" hreflang="it" />
+	<link rel="alternate" href="https://saloniamatteo.top/en/info.html" hreflang="en" />
 
 	<!-- Optimize page loading on some devices -->
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1' name='viewport'>
-	<meta name="description" content="Benvenuto sul sito di Salonia Matteo! Welcome to Salonia Matteo's website!">
+	<meta name="description" content="Kernel">
 
 	<!-- Social media preview -->
 	<meta property="og:title"	content="Salonia Matteo">
-	<meta property="og:url"		content="https://saloniamatteo.top/index.html">
-	<meta property="og:description"	content="Benvenuto sul sito di Salonia Matteo! Welcome to Salonia Matteo's website!">
+	<meta property="og:url"		content="https://saloniamatteo.top/info.html">
+	<meta property="og:description"	content="Kernel">
 	<meta property="og:image"	content="https://saloniamatteo.top/favicon.png">
 
 	<!-- Twitter-specific -->
 	<meta property="twitter:title"		content="Salonia Matteo">
 	<meta property="twitter:card"		content="summary_large_image">
-	<meta property="twitter:description"	content="Benvenuto sul sito di Salonia Matteo! Welcome to Salonia Matteo's website!">
+	<meta property="twitter:description"	content="Kernel">
 	<meta property="twitter:image"		content="https://saloniamatteo.top/favicon.png">
 
 	<!--Favicon-->
@@ -82,12 +86,12 @@ function wrap() {
 			<div id="flags" class="row no-wrap">
 				<div id="f-it" class="col left-align large-margin">
 					<article class="center-align no-padding">
-					<a href="it/index.html">
+					<a href="it/info.html">
 					<img src="pics/it.png" class="responsive medium"
 					style="max-height: 700rem!important; max-width: 1000rem!important">
 					</a>
 					<div class="center-align padding">
-						<a href="it/index.html" class="button border indigo white-text middle-align"
+						<a href="it/info.html" class="button border indigo white-text middle-align"
 						style="min-height: 40px!important"><h5>Italiano</h5></a>
 					</div>
 					</article>
@@ -95,12 +99,12 @@ function wrap() {
 
 				<div id="f-en" class="col right-align large-margin">
 					<article class="center-align no-padding">
-					<a href="en/index.html">
+					<a href="en/info.html">
 					<img src="pics/en.png" class="responsive medium"
 					style="max-height: 700rem!important; max-width: 1000rem!important">
 					</a>
 					<div class="center-align padding">
-						<a href="en/index.html" class="button border indigo white-text middle-align"
+						<a href="en/info.html" class="button border indigo white-text middle-align"
 						style="min-height: 40px!important"><h5>English</h5></a>
 					</div>
 					</article>
