Fix italian pointed symbols

--- a/it/kernel.html
+++ b/it/kernel.html
@@ -353,7 +353,7 @@ ui();
 			</div>
 
 			<p class="small-space">
-			E' una buona pratica controllare la configurazione del Kernel prima di compilarlo.
+			E'Egrave; una buona pratica controllare la configurazione del Kernel prima di compilarlo.
 			Per fare ci&ograve;, lo script <u>build.sh</u> rende possibile la modifica della configurazione,
 			eseguendo <u>make menuconfig</u> nella directory in cui &egrave; presente il Kernel,
 			con l'opzione di copiare quella di default, o senza copiarla, per usare il proprio file di configurazione.
@@ -397,7 +397,7 @@ ui();
 			<p class="small-space">
 			Dopo aver <a href="#script-2.2" class="indigo-text underline">applicato le ottimizzazioni CPU</a>
 			e aver rincontrollato la <a href="#script-3" class="indigo-text underline">configurazione del Kernel</a>,
-			&egrave; tempo di scegliere le impostazioni per migliorare notevolmente la performance. Ecco la lista delle opzioni:
+			E'Egrave; tempo di scegliere le impostazioni per migliorare notevolmente la performance. Ecco la lista delle opzioni:
 			</p>
 			</div>
 		</div>
@@ -419,7 +419,7 @@ ui();
 				<td class="card small-margin middle-align col no-mtop small-mbot w-150"><b>--ccache</b></td>
 				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150">
 				<p>
-				Usa&nbsp;<b>ccache</b>&nbsp;per velocizzare la compilazione. &egrave; consigliato usare quest'opzione
+				Usa&nbsp;<b>ccache</b>&nbsp;per velocizzare la compilazione. E'Egrave; consigliato usare quest'opzione
 				se si compila il Kernel almeno due volte, per velocizzare le compilazioni successive.
 				(<a href="https://ccache.dev/performance.html" class="indigo-text underline">Vedi articolo</a>)
 				</p></td>
