--- a/it/software.html
+++ b/it/software.html
@@ -162,7 +162,7 @@ ui();
 			Un clone di Snake che presenta una pseudo-interfaccia grafica da terminale usando
 			<a href="https://invisible-island.net/ncurses/announce.html"
 			class="button border tiny indigo white-text">ncurses&nbsp;<i>arrow_forward</i></a>.
-		   	&egrave; possibile salvare i punteggi con un nome personalizzato, in un file qualsiasi;
+		   	E'Egrave; possibile salvare i punteggi con un nome personalizzato, in un file qualsiasi;
 			inoltre, &egrave; possibile modificare la velocit&agrave;/difficolt&agrave;, e di mostrare i bordi dello schermo.
 			</p>
 			</div>
@@ -185,7 +185,7 @@ ui();
 
 			<p>
 			Programma con cui si possono creare dei piccoli Quiz e/o risolvere Quiz. Non presenta un interfaccia grafica;
-			va usato da terminale, seguendo il testo sullo schermo. &egrave; possibile salvare i punteggi con un nome personalizzato,
+			va usato da terminale, seguendo il testo sullo schermo. E'Egrave; possibile salvare i punteggi con un nome personalizzato,
 			in un file qualsiasi; inoltre, un creatore di quiz &egrave; incluso, ed &egrave; facile da usare.
 			</p>
 			</div>
