--- a/it/kernel.html
+++ b/it/kernel.html
@@ -34,8 +34,8 @@
 	<script src="../js/light.js" type="text/javascript"></script>
 
 	<!-- Montserrat font -->
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"></noscript>
+	<link href="../css/montserrat.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link href="../css/montserrat.css" rel="stylesheet"></noscript>
 
 	<!-- CSS overrides -->
 	<link rel="preload" href="../css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -45,6 +45,19 @@
 
 <script>
 ui();
+
+document.onreadystatechange = function() { adjlen(); document.body.onresize = function() { adjlen() }}
+
+function adjlen() {
+	/* Fix length */
+	var w = document.body.clientWidth;
+	var comp = document.getElementById("comp");
+
+	if (w >= 850)
+		comp.innerHTML = "Tempo compilazione"
+	else
+		comp.innerHTML = "Tempo compil."
+}
 </script>
 
 <body class="is-light">
@@ -170,7 +183,7 @@ ui();
 		<div class="small-margin row no-wrap middle-align">
 			<div class="col small-margin">
 			<div class="row min">
-				<h6 id="script-1" class="col s11 card bold left-align indigo white-text small-margin">
+				<h6 id="script-1" class="card border center-align bold indigo white-text small-padding small-margin">
 				<a href="#script-1">1. Ottenimento repository</a></h6>
 			</div>
 
@@ -193,7 +206,7 @@ ui();
 		<div class="small-margin row no-wrap middle-align">
 			<div class="col small-margin">
 			<div class="row min">
-				<h6 id="script-2" class="col s11 card bold left-align indigo white-text small-margin">
+				<h6 id="script-2" class="card border center-align bold indigo white-text small-padding small-margin">
 				<a href="#script-2">2. Selezione Versione</a></h6>
 			</div>
 
@@ -212,7 +225,7 @@ ui();
 		<div class="small-margin row no-wrap middle-align">
 			<div class="col small-margin">
 			<div class="row min">
-				<h6 id="script-2.1" class="col s11 card bold left-align indigo white-text small-margin">
+				<h6 id="script-2.1" class="card border center-align bold indigo white-text small-padding small-margin">
 				<a href="#script-2.1">2.1. Versione Personalizzata</a></h6>
 			</div>
 
@@ -261,7 +274,7 @@ ui();
 		<div class="small-margin row no-wrap middle-align">
 			<div class="col small-margin">
 			<div class="row min">
-				<h6 id="script-2.2" class="col s11 card bold left-align indigo white-text small-margin">
+				<h6 id="script-2.2" class="card border center-align bold indigo white-text small-padding small-margin">
 				<a href="#script-2.2">2.2. Ottimizzazioni CPU</a></h6>
 			</div>
 
@@ -348,7 +361,7 @@ ui();
 		<div class="small-margin row no-wrap middle-align">
 			<div class="col small-margin">
 			<div class="row min">
-				<h6 id="script-3" class="col s11 card bold left-align indigo white-text small-margin">
+				<h6 id="script-3" class="card border center-align bold indigo white-text small-padding small-margin">
 				<a href="#script-3">3. Configurazione Kernel</a></h6>
 			</div>
 
@@ -390,7 +403,7 @@ ui();
 		<div class="small-margin row no-wrap middle-align">
 			<div class="col small-margin">
 			<div class="row min">
-				<h6 id="script-4" class="col s11 card bold left-align indigo white-text small-margin">
+				<h6 id="script-4" class="card border center-align bold indigo white-text small-padding small-margin">
 				<a href="#script-4">4. Compilazione Kernel</a></h6>
 			</div>
 
@@ -407,17 +420,17 @@ ui();
 			<table class="small-margin">
 			<thead>
 			<tr class="row medium-width no-wrap">
-				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-100 max-w-150">Flag corta</th>
-				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col w-150">Flag lunga</th>
-				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-150">Descrizione</th>
+				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-90 max-w-170">Flag corta</th>
+				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-110 max-w-300">Flag lunga</th>
+				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-250">Descrizione</th>
 			</tr>
 			</thead>
 
 			<tbody class="small-margin">
 			<tr class="row medium-width no-wrap small-mbot no-mtop">
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150"><b>-e</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot w-150"><b>--ccache</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150">
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-90 max-w-170"><b>-e</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-110 max-w-300"><b>--ccache</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-250">
 				<p>
 				Usa&nbsp;<b>ccache</b>&nbsp;per velocizzare la compilazione. &Egrave; consigliato usare quest'opzione
 				se si compila il Kernel almeno due volte, per velocizzare le compilazioni successive.
@@ -426,9 +439,9 @@ ui();
 			</tr>
 
 			<tr class="row medium-width no-wrap small-mbot no-mtop">
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150"><b>-f</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot w-150"><b>--fastmath</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150">
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-90 max-w-170"><b>-f</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-110 max-w-300"><b>--fastmath</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-250">
 				<p>
 				Compila il Kernel usando <b>Matematica Veloce non sicura</b>.
 				Tipicamente non ha nessun effetto collaterale e
@@ -437,9 +450,9 @@ ui();
 			</tr>
 
 			<tr class="row medium-width no-wrap small-mbot no-mtop">
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150"><b>-F</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot w-150"><b>--fastmath-s</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150">
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-90 max-w-170"><b>-F</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-110 max-w-300"><b>--fastmath-s</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-250">
 				<p>
 				Compila il Kernel usando <b>Matematica Veloce sicura</b>.
 				Da usare se Matematica Veloce non sicura non sicura riporta problemi, in casi rari.
@@ -447,18 +460,18 @@ ui();
 			</tr>
 
 			<tr class="row medium-width no-wrap small-mbot no-mtop">
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150"><b>-g</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot w-150"><b>--graphite</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150">
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-90 max-w-170"><b>-g</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-110 max-w-300"><b>--graphite</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-250">
 				<p>
 				Compila il Kernel usando <b>Graphite</b>. Tipicamente quest'opzione riduce leggermente la performance.
 				</p></td>
 			</tr>
 
 			<tr class="row medium-width no-wrap small-mbot no-mtop">
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150"><b>-l</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot w-150"><b>--clearl-ps</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150">
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-90 max-w-170"><b>-l</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-110 max-w-300"><b>--clearl-ps</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-250">
 				<p>
 				Compila il Kernel applicando le <b>patch di Clear Linux</b>.
 				Queste patch sono volte all'incremento ulteriore della performance, e vengono
@@ -468,9 +481,9 @@ ui();
 			</tr>
 
 			<tr class="row medium-width no-wrap small-mbot no-mtop">
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150"><b>-p</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot w-150"><b>--patches</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150">
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-90 max-w-170"><b>-p</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-110 max-w-300"><b>--patches</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-250">
 				<p>
 				Compila il Kernel applicando le <b>patch incluse</b>.
 				Anche queste patch sono volte all'incremento ulteriore della performance,
@@ -563,50 +576,53 @@ ui();
 			<table class="small-margin">
 			<thead>
 			<tr class="row medium-width no-wrap">
-				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-150 min-h-34">Impostazioni</th>
-				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-150 min-h-34" style="max-width:170px!important">Tempo compilazione</th>
-				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-100 max-w-150 min-h-34">Max H/s</th>
-				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-100 max-w-150 min-h-34">Riga di comando</th>
+				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-200 max-w-700">Impostazioni</th>
+				<th id="comp" class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-130 max-w-300">Tempo compil.</th>
+				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-100 max-w-300">Max H/s</th>
+				<th class="card indigo white-text bold small-margin medium-space small-padding middle-align col min-w-170 max-w-300">Riga di comando</th>
 			</tr>
 			</thead>
 
 			<tbody class="small-margin">
 			<tr class="row medium-width no-wrap small-mbot no-mtop">
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150">
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-200 max-w-700">
 				<p>
 				<b>Matematica Veloce non sicura</b> + <b>Patch Clear Linux</b> + <b>Patch incluse</b>
 				</p></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150 max-w-180">7m 7s</td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150">1570</td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150"><b>./build.sh -f -l -p</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-130 max-w-300">7m 7s</td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-300">1570</td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-170 max-w-300"><b>./build.sh -f -l -p</b></td>
 			</tr>
 
 			<tr class="row medium-width no-wrap small-mbot no-mtop">
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150">
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-200 max-w-700">
 				<p>
 				<b>Matematica Veloce non sicura</b> + <b>Graphite</b> +
 				<b>Patch Clear Linux</b> + <b>Patch incluse</b>
 				</p></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150 max-w-180">7m 3s</td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150">1500</td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150"><b>./build.sh -f -g -l -p</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-130 max-w-300">7m 3s</td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-300">1500</td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-170 max-w-300"><b>./build.sh -f -g -l -p</b></td>
 			</tr>
 
 			<tr class="row medium-width no-wrap small-mbot no-mtop">
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150">
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-200 max-w-700">
 				<p>
 				<b>Patch Clear Linux</b> + <b>Patch incluse</b>
 				</p></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150 max-w-180">7m</td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150">1463</td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150"><b>./build.sh -l -p</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-130 max-w-300">7m</td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-300">1463</td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-170 max-w-300"><b>./build.sh -l -p</b></td>
 			</tr>
 
 			<tr class="row medium-width no-wrap small-mbot no-mtop">
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150 min-h-34"><b>Patch incluse</b></td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-150 max-w-180">7m</td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150">1460</td>
-				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-150"><b>./build.sh -l -p</b></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-200 max-w-700">
+				<p>
+				<b>Patch incluse</b>
+				</p></td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-130 max-w-300">7m</td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-100 max-w-300">1460</td>
+				<td class="card small-margin middle-align col no-mtop small-mbot min-w-170 max-w-300"><b>./build.sh -l -p</b></td>
 			</tr>
 			</tbody>
 			</table>
