--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 	<script src="js/light.js" type="text/javascript"></script>
 
 	<!-- Montserrat font -->
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"></noscript>
+	<link href="css/montserrat.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link href="css/montserrat.css" rel="stylesheet"></noscript>
 
 	<!-- CSS overrides -->
 	<link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -54,7 +54,7 @@ function wrap() {
 	var fit = document.getElementById("f-it");
 	var fen = document.getElementById("f-en");
 
-	/* Check width */
+	/* Flag divs */
 	if (w >= 690) {
 		flags.classList.replace("wrap", "no-wrap");
 		fit.classList = fit.classList.toString().replace("center-align", "col left-align").split(",");
@@ -73,14 +73,15 @@ function wrap() {
 		<i>light_mode</i>
 	</button>
 
-	<div class="small-margin">
-		<article class="center middle small-margin" style="margin-top: 20rem!important">
+	<div class="large-margin">
+		<article class="center middle large-margin" style="margin-top: 20rem!important">
 			<div class="margin no-wrap">
-				<h6 class="card border center-align bold indigo white-text small-padding">Scegli una lingua &mdash; Choose a language</h6>
+				<h6 class="card border center-align bold indigo white-text small-padding">
+				Scegli una lingua &mdash; Choose a language</h6>
 			</div>
 
-			<div id="flags" class="row no-wrap">
-				<div id="f-it" class="col left-align large-margin">
+			<div id="flags" class="center-align row no-wrap">
+				<div id="f-it" class="col large-margin" style="max-width: 500rem!important">
 					<article class="center-align no-padding">
 					<a href="it/index.html">
 					<img src="pics/it.png" class="responsive medium"
@@ -93,7 +94,7 @@ function wrap() {
 					</article>
 				</div>
 
-				<div id="f-en" class="col right-align large-margin">
+				<div id="f-en" class="col large-margin" style="max-width: 500rem!important">
 					<article class="center-align no-padding">
 					<a href="en/index.html">
 					<img src="pics/en.png" class="responsive medium"
