--- a/software.html
+++ b/software.html
@@ -38,8 +38,8 @@
 	<script src="js/light.js" type="text/javascript"></script>
 
 	<!-- Montserrat font -->
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"></noscript>
+	<link href="css/montserrat.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link href="css/montserrat.css" rel="stylesheet"></noscript>
 
 	<!-- CSS overrides -->
 	<link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
