Fix main page, kernel github button, reset beercss

--- a/en/kernel.html
+++ b/en/kernel.html
@@ -628,7 +628,7 @@ ui();
 
 		<div class="small-margin row no-wrap middle-align">
 			<div class="col small-margin">
-			<p class="small-space middle-align">
+			<p class="small-space">
 			The source code of this Kernel is available on the 
 			<a href="https://github.com/saloniamatteo/kernel" class="button small indigo white-text">
 			GitHub&nbsp;<i>arrow_forward</i></a> repository.
