--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ function wrap() {
 			</div>
 
 			<div id="flags" class="center-align row no-wrap">
-				<div id="f-it" class="col large-margin" style="max-width: 500rem!important">
+				<div id="f-it" class="col large-margin">
 					<article class="center-align no-padding">
 					<a href="it/index.html">
 					<img src="pics/it.png" class="responsive medium"
@@ -94,7 +94,7 @@ function wrap() {
 					</article>
 				</div>
 
-				<div id="f-en" class="col large-margin" style="max-width: 500rem!important">
+				<div id="f-en" class="col large-margin">
 					<article class="center-align no-padding">
 					<a href="en/index.html">
 					<img src="pics/en.png" class="responsive medium"
