--- a/it/kernel.html
+++ b/it/kernel.html
@@ -642,7 +642,7 @@ function adjlen() {
 
 		<div class="small-margin row no-wrap middle-align">
 			<div class="col small-margin">
-			<p class="small-space middle-align">
+			<p class="small-space">
 			Il codice sorgente di questo Kernel &egrave; disponibile sulla repository
 			<a href="https://github.com/saloniamatteo/kernel" class="button small indigo white-text">
 			GitHub&nbsp;<i>arrow_forward</i></a>
