--- a/it/index.html
+++ b/it/index.html
@@ -31,6 +31,7 @@
 	<link href="../css/beer.min.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<noscript><link href="../css/beer.min.css" rel="stylesheet"></noscript>
 	<script src="../js/beer.min.js" type="text/javascript"></script>
+	<script src="../js/light.js" type="text/javascript"></script>
 
 	<!-- Montserrat font -->
 	<link href="../css/montserrat.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -56,7 +57,11 @@ function toggle_light() {
 	let gp = "../pics/github-";
 	g1.src = (l == "is-dark" ? gp + "light.png" : gp + "dark.png");
 	g2.src = (l == "is-dark" ? gp + "light.png" : gp + "dark.png");
+
+	update_cookie();
 }
+
+document.onreadystatechange = function() { remember_prefs(); document.body.onresize = function() { remember_prefs() }}
 </script>
 
 <body class="is-light">
