--- a/it/kernel.html
+++ b/it/kernel.html
@@ -23,10 +23,6 @@
 	<!--Favicon-->
 	<link rel="shortcut icon" href="../favicon.png">
 
-	<!-- Speed-up requests to CDNs -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
 	<!-- Beer CSS -->
 	<link href="../css/beer.min.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<noscript><link href="../css/beer.min.css" rel="stylesheet"></noscript>
@@ -46,7 +42,9 @@
 <script>
 ui();
 
-document.onreadystatechange = function() { adjlen(); document.body.onresize = function() { adjlen() }}
+document.onreadystatechange = function() { load(); document.body.onresize = function() { load() }}
+
+function load() { adjlen(); remember_prefs() }
 
 function adjlen() {
 	/* Fix length */
